# FileNinja-2.0

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
src/: db.sqlite3  manage.py
src/FileNinja/: asgi.py  jazzmin.py  settings.py  urls.py  views.py  wsgi.py
src/apps/file_converter/: apps.py  urls.py  views.py
src/apps/file_converter/templates/file_converter/: pdf_to_docx.html
src/apps/homepage/: admin.py  apps.py  models.py  urls.py  views.py
src/apps/homepage/migrations/: 0001_initial.py
src/apps/homepage/templates/homepage/: base.html  index.html
src/static/assets/css/: style.css
src/static/assets/custom/css/: styles.css
src/static/assets/custom/js/: customjs.js
src/templates/: index.html
